#auto_layout: fixed the nowrap url problem on Chrome

--- a/src/main/webapp/style/piggydb-fragments.css
+++ b/src/main/webapp/style/piggydb-fragments.css
@@ -258,6 +258,11 @@ td.fragment-body {
   padding-right: 7px;
 }
 
+td.fragment-body .fragment-content a.url-link {
+	word-break: break-all;
+	word-wrap: break-word;
+}
+
 td.fragment-body .fragment-content a.tag {
   color: gray;
   text-decoration: none;
